tai cau truc lai thu muc

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <!-- <link rel="stylesheet" href="css/component.css" />
     <link rel="stylesheet" href="css/default.css" /> -->
     <link rel="icon" type="image/x-icon" href="assets/image/timbus.vn.ico" />
-    <script src="js/script.js"></script>
-    <script src="js/classie.js"></script>
-    <script src="js/modernizr.custom.js"></script>
+    <!-- <script src="js/script.js"></script> -->
+    <script src="js/dieu_khien_LED.js"></script>
+    <script src="js/hien_thi_LED.js"></script>
   </head>
   <body>
     <div>
