Sua lai mode mac dinh

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             C.TY BẢO YẾN
           </button>
         </div>
-        <p id="ModeDangChay">MODE MẶC ĐỊNH: XE ĐIỆN 2</p>
+        <p id="ModeDangChay">MODE MẶC ĐỊNH: TRUYỀN THỐNG</p>
       </div>
       <details>
         <summary id="UngDungHoTroTotNhat">THÔNG TIN</summary>
