tinh gon thong tin, them dev mode

--- a/index.html
+++ b/index.html
@@ -97,36 +97,42 @@
           >
             C.TY BẢO YẾN
           </button>
+          <button
+            class="DEVMODE"
+            onclick="chonMode('dev_mode'), tatHieuUngNhay()"
+          >
+            DEV MODE
+          </button>
         </div>
       </div>
       <details>
         <summary id="UngDungHoTroTotNhat">THÔNG TIN</summary>
         <div class="UngDungHoTroTotNhat">
+          <p id="UngDungHoTroTotNhat">HỖ TRỢ TỐT NHẤT CHO</p>
+          <div id="logobus">
+            <img
+              id="logobus"
+              src="assets/image/logohanoibus.png"
+              alt="TRANSERCO HANOIBUS"
+            />
+            <img
+              id="logobus"
+              src="assets/image/HANOI BRT.png"
+              alt="HANOI BRT"
+            />
+            <img
+              id="logobus"
+              src="assets/image/bus_lien_ninh.png"
+              alt="BUSLIENINH"
+            />
+            <img
+              id="logobus"
+              src="assets/image/baoyengroup.png"
+              alt="BUSLIENINH"
+            />
+          </div>
           <p id="UngDungHoTroTotNhat">
-            ỨNG DỤNG HỖ TRỢ TỐT NHẤT CHO CÁC TUYẾN XE BUÝT
-            <u>TRUYỀN THỐNG</u> TẠI HÀ NỘI, THUỘC
-          </p>
-          <img
-            id="logobus"
-            src="assets/image/logohanoibus.png"
-            alt="TRANSERCO HANOIBUS"
-          />
-          <p id="UngDungHoTroTotNhat">,</p>
-          <img id="logobus" src="assets/image/HANOI BRT.png" alt="HANOI BRT" />
-          <p id="UngDungHoTroTotNhat">VÀ</p>
-          <img
-            id="logobus"
-            src="assets/image/bus_lien_ninh.png"
-            alt="BUSLIENINH"
-          />
-          <p id="UngDungHoTroTotNhat">ỨNG DỤNG NÀY KHÔNG PHẢI CỦA</p>
-          <img
-            id="logobus"
-            src="assets/image/logohanoibus.png"
-            alt="TRANSERCO HANOIBUS"
-          />
-          <p id="UngDungHoTroTotNhat">
-            VÀ CÁC DOANH NGHIỆP KỂ TRÊN. ĐÂY CHỈ LÀ SẢN PHẨM CÁ NHÂN.
+            TÁC GIẢ: NGUYỄN MINH HIẾU, LỚP KTPM02 ĐẠI HỌC CÔNG NGHIỆP HÀ NỘI
           </p>
         </div>
       </details>
