--- a/input.html
+++ b/input.html
@@ -15,11 +15,11 @@
     <div class="parent">
       <div class="Nhap">
         <p id="NhapLabel">NHẬP DỮ LIỆU TUYẾN</p>
-        <img
+        <!-- <img
           id="logobus"
           src="assets/image/tong_cong_ty_vt_hanoi.png"
           alt="TRANSERCO HANOIBUS"
-        />
+        /> -->
         <div class="NhapDuLieu">
           <p id="maTuyenInput">Nhập mã tuyến:</p>
           <input type="text" placeholder="16..." />
