Them tinh nang preview tuyen, doi mau nen, theo doi trang thai hoat dong. Tang chieu rong bang LED len 150px

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="icon" type="image/x-icon" href="assets/image/timbus.vn.ico" />
     <script src="js/dieu_khien_LED.js"></script>
     <script src="js/hien_thi_LED.js"></script>
-    <script src="js/dieu_huong.js"></script>
     <script src="js/window_onload.js"></script>
+    <script src="js/theme.js"></script>
   </head>
   <body>
     <div>
@@ -41,49 +41,49 @@
         </div>
       </div>
       <div class="BangDieuKhien">
-        <p id="BangDieuKhienLabel">BẢNG ĐIỀU KHIỂN</p>
+        <p class="BangDieuKhienLabel">BẢNG ĐIỀU KHIỂN</p>
         <div class="NutBam">
+          <button class="ChayLed" id="xanhla" onclick="start()">CHẠY</button>
+          <button class="RESET" onclick="reset()">TẮT</button>
+
           <button
             class="daoChieuTuyen"
             onclick="daoChieuLED('diemDau', 'diemCuoi')"
           >
             ĐẢO CHIỀU
           </button>
-          <button class="ChayLed" onclick="start()">CHẠY</button>
           <button class="DungLed" onclick="stop()">ĐÓNG BĂNG</button>
           <button class="XeVeGara" onclick="XeVeGara()">XE VỀ GARA</button>
           <button class="HuyDongRaTuyen" onclick="HuyDongRaTuyen()">
             XE HUY ĐỘNG
           </button>
-          <button class="RESET" onclick="reset()">XÓA LED</button>
-          <button class="TEST" onclick="chayChu()">H.ỨNG CHẠY CHỮ</button>
-          <button class="NhapDuLieu" onclick="goToInputPage()">NHẬP</button>
+          <button class="TEST" onclick="chayChu()">CHẠY CHỮ</button>
+          <a href="input.html">
+            <button class="NhapDuLieu">NHẬP</button>
+          </a>
         </div>
-        <p id="ModeDangChay">MODE MẶC ĐỊNH: TRUYỀN THỐNG</p>
+        <p id="ModeDangChay">CHỌN MODE CHẠY</p>
         <div class="NutBam">
           <button
             class="XEDIEN"
             onclick="chonMode('xe_dien'), tatHieuUngNhay()"
           >
-            C.TY XE ĐIỆN
+            XE ĐIỆN
           </button>
           <button
             class="XEDIEN2"
             onclick="chonMode('xe_dien2'), tatHieuUngNhay()"
           >
-            C.TY XE ĐIỆN 2
+            XE ĐIỆN 2
           </button>
-          <button
-            class="TRUYENTHONG"
-            onclick="chonMode('truyen_thong'), tatHieuUngNhay()"
-          >
-            TRUYỀN THỐNG
+          <button class="THUONG" onclick="chonMode('thuong'), tatHieuUngNhay()">
+            THƯỜNG
           </button>
           <button
             class="LIENNINH"
             onclick="chonMode('lien_ninh'), tatHieuUngNhay()"
           >
-            C.TY LIÊN NINH
+            LIÊN NINH
           </button>
           <button
             class="HANOIBRT"
@@ -95,50 +95,63 @@
             class="BAOYEN"
             onclick="chonMode('bao_yen'), batHieuUngNhay()"
           >
-            C.TY BẢO YẾN
+            BẢO YẾN
           </button>
-          <button
-            class="DEVMODE"
-            onclick="chonMode('dev_mode'), tatHieuUngNhay()"
-          >
-            DEV MODE
+          <button class="DEMO`" onclick="chonMode('demo'), tatHieuUngNhay()">
+            DEMO
           </button>
+        </div>
+        <p class="BangDieuKhienLabel">MÀU NỀN</p>
+        <div class="NutBam">
+          <button id="xanhduong" onclick="setColor(0)">XANH DƯƠNG</button>
+          <button id="xanhla" onclick="setColor(1)">XANH LÁ</button>
+          <button id="cam" onclick="setColor(2)">CAM</button>
         </div>
       </div>
-      <details>
-        <summary id="UngDungHoTroTotNhat">THÔNG TIN</summary>
-        <div class="UngDungHoTroTotNhat">
-          <p id="UngDungHoTroTotNhat">HỖ TRỢ TỐT NHẤT CHO</p>
-          <div id="logobus">
-            <img
-              id="logobus"
-              src="assets/image/logohanoibus.png"
-              alt="TRANSERCO HANOIBUS"
-            />
-            <img
-              id="logobus"
-              src="assets/image/HANOI BRT.png"
-              alt="HANOI BRT"
-            />
-            <img
-              id="logobus"
-              src="assets/image/bus_lien_ninh.png"
-              alt="BUSLIENINH"
-            />
-            <img
-              id="logobus"
-              src="assets/image/baoyengroup.png"
-              alt="BUSLIENINH"
-            />
+      <div class="container">
+        <div class="trangThai">
+          <p class="BangDieuKhienLabel">THÔNG TIN TUYẾN</p>
+          <div class="tuyenPreview">
+            <p id="maTuyenLuu"></p>
+            <p id="diemDauLuu"></p>
+            <p>➜</p>
+            <p id="diemCuoiLuu"></p>
           </div>
-          <p id="UngDungHoTroTotNhat">
+          <!-- <p id="xiNghiepLuu"></p> -->
+          <p class="BangDieuKhienLabel">TRẠNG THÁI HOẠT ĐỘNG</p>
+          <table class="Table">
+            <tr>
+              <th>ĐANG CHẠY?</th>
+              <th>TẠM DỪNG?</th>
+              <th>CHẠY CHỮ?</th>
+              <th>MODE</th>
+            </tr>
+            <tr>
+              <td id="isRunning"></td>
+              <td id="isPausing">NO</td>
+              <td id="isTextMoving">NO</td>
+              <td id="MODE">THƯỜNG</td>
+            </tr>
+          </table>
+        </div>
+        <div class="thongTin">
+          <p class="UngDungHoTroTotNhat">HỖ TRỢ TỐT NHẤT CHO</p>
+          <div id="logobus">
+            <img src="assets/image/logohanoibus.png" alt="TRANSERCO HANOIBUS" />
+            <img src="assets/image/HANOI BRT.png" alt="HANOI BRT" />
+            <img src="assets/image/bus_lien_ninh.png" alt="BUSLIENINH" />
+            <img src="assets/image/baoyengroup.png" alt="BUSLIENINH" />
+          </div>
+          <p class="UngDungHoTroTotNhat">
+            CHÚ Ý: ĐÓNG BĂNG, TẮT LED TRƯỚC KHI ĐỔI MODE
+          </p>
+          <p class="UngDungHoTroTotNhat">
             TÁC GIẢ: NGUYỄN MINH HIẾU, LỚP KTPM02 ĐẠI HỌC CÔNG NGHIỆP HÀ NỘI
+            <br />
+            CODE CÓ XẤU CÁC ANH GIƠ CAO ĐÁNH KHẼ THÔI Ạ 😭
           </p>
         </div>
-      </details>
+      </div>
     </div>
   </body>
-  <footer>
-    <div class="road-line"></div>
-  </footer>
 </html>
