--- a/input.html
+++ b/input.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/font.css" />
     <link rel="icon" type="image/x-icon" href="assets/image/timbus.vn.ico" />
     <script src="js/dieu_khien_LED.js"></script>
-    <script src="js/hien_thi_LED.js"></script>
+    <script src="js/input.js"></script>
     <script src="js/window_onload.js"></script>
     <script src="js/theme.js"></script>
   </head>
