Tang margin len 30px

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <div>
       <div class="LED">
         <p id="maTuyen">00</p>
-        <div class="luongTuyen_Parent">
+        <div class="NoiDungChayChu">
+          <!-- Không được xóa id route-info -->
           <div class="luongTuyen" id="route-info">
             <p id="diemDau">ĐÂY LÀ ĐIỂM ĐẦU</p>
             <img id="arrow" src="assets/image/mui_ten_xanh.gif" alt="->" />
