Them diem giua, danh cho cac tuyen co 3 chang

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
           <!-- Không được xóa id route-info -->
           <div class="luongTuyen" id="route-info">
             <p id="diemDau">ĐÂY LÀ ĐIỂM ĐẦU</p>
-            <img id="arrow" src="assets/image/mui_ten_xanh.gif" alt="->" />
+            <img id="mui_ten_xanh1" src="assets/image/mui_ten_xanh.gif" alt="->" />
+            <p id="diemGiua">ĐÂY LÀ ĐIỂM GIỮA</p>
+            <img id="mui_ten_xanh2" src="assets/image/mui_ten_xanh.gif" alt="->" />
             <p id="diemCuoi">ĐÂY LÀ ĐIỂM CUỐI</p>
           </div>
           <p id="xiNghiep">ĐÂY LÀ TÊN XÍ NGHIỆP</p>
@@ -115,7 +117,9 @@
           <div class="tuyenPreview">
             <p id="maTuyenLuu"></p>
             <p id="diemDauLuu"></p>
-            <p>➜</p>
+            <p id="mui_ten1">➜</p>
+            <p id="diemGiuaLuu"></p>
+            <p id="mui_ten2">➜</p>
             <p id="diemCuoiLuu"></p>
           </div>
           <!-- <p id="xiNghiepLuu"></p> -->
